--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   flutter_svg: ^0.22.0
   fl_chart: ^0.36.1
   provider: ^5.0.0
+  table_calendar: ^3.0.0
+  syncfusion_flutter_gauges: ^19.3.61
+
 
 
 dev_dependencies:
